--- a/podfile
+++ b/podfile
@@ -6,7 +6,8 @@ use_frameworks!
 target 'TimeTable' do
 pod 'SVProgressHUD'
 pod 'SCLAlertView'
-pod 'Eureka', :git => 'https://github.com/xmartlabs/Eureka.git', :branch =>     'feature/Xcode9-Swift3_2'
+# pod 'Eureka', :git => 'https://github.com/xmartlabs/Eureka.git', :branch =>     'feature/Xcode9-Swift3_2'
+pod 'Eureka'
 pod 'Firebase/Core'
 pod 'Firebase/AdMob'
 pod 'Ensembles', '~> 1.0'
