Added Firebase Chrashlytics and Firebase Performance.

--- a/podfile
+++ b/podfile
@@ -9,6 +9,9 @@ pod 'SVProgressHUD'
 pod 'Eureka'
 pod 'Firebase/Core'
 pod 'Firebase/AdMob'
+pod 'Firebase/Performance'
+pod 'Fabric', '~> 1.7.6'
+pod 'Crashlytics', '~> 3.10.1'
 pod 'Ensembles', '~> 1.0'
 pod 'DZNEmptyDataSet'
 pod 'NotificationBannerSwift'
